Display Currently Registered P2P Server

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -54,6 +54,7 @@
    "Power Video Viewer": "Power Video Viewer",
    "Time-lapse": "Time-lapse",
    "Montage": "Montage",
+   "Registered": "Registered",
    "Open All Monitors": "Open All Monitors",
    "Accounts": "Accounts",
    "Settings": "Settings",
