Show more live stats in P2P Server selection

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -55,6 +55,9 @@
    "Time-lapse": "Time-lapse",
    "Montage": "Montage",
    "Registered": "Registered",
+   "Viewing Server Stats": "Viewing Server Stats",
+   "Connected Users": "Connected Users",
+   "Registered Servers": "Registered Servers",
    "Open All Monitors": "Open All Monitors",
    "Accounts": "Accounts",
    "Settings": "Settings",
