humanize timelapse mp4 builder

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -135,6 +135,8 @@
    "Size (mb)": "Size (mb)",
    "Watch": "Watch",
    "Download": "Download",
+   "videoBuildingText1": "Video is currently building. Check again later.",
+   "Build Video": "Build Video",
    "Delete": "Delete",
    "Fix": "Fix",
    "Use HTML5 Play Method": "Use HTML5 Play Method",
@@ -834,9 +836,12 @@
    "Monitor mode is already": "Monitor mode is already",
    "Monitor or Key does not exist.": "Monitor or Key does not exist.",
    "No Group with this key exists": "No Group with this key exists",
+   "Downloading...": "Downloading...",
    "Downloading Videos": "Downloading Videos",
    "Zipping Videos": "Zipping Videos",
+   "Automatic Checking Cancelled": "Automatic Checking Cancelled",
    "Success": "Success",
+   "Please Wait or Click to Stop Checking": "Please Wait or Click to Stop Checking",
    "Search Settings": "Search Settings",
    "Trigger Successful": "Trigger Successful",
    "Trigger Blocked": "Trigger Blocked",
