--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -195,6 +195,7 @@
    "Can Edit Monitor": "Can Edit Monitor",
    "Can Delete Videos": "Can Delete Videos",
    "Delete Video": "Delete Video",
+   "Delete Timelapse Frame": "Delete Timelapse Frame",
    "Can View Videos and Events": "Can View Videos and Events",
    "Can Delete Videos and Events": "Can Delete Videos and Events",
    "Saved Filters": "Saved Filters",
@@ -405,6 +406,7 @@
    "Fix Video": "Fix Video",
    "FixVideoMsg": "Do you want to fix this video? You cannot undo this action.",
    "DeleteVideoMsg": "Do you want to delete this video? You cannot recover it.",
+   "DeleteThisMsg": "Do you want to delete this? You cannot recover it.",
    "dropBoxSuccess": "Success! Files saved to your Dropbox.",
    "API Key Deleted": "API Key Deleted",
    "APIKeyDeletedText": "Key has been deleted. It will no longer work.",
