--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -1038,6 +1038,7 @@
    "Copy to Settings":"Copy to Settings",
    "Copy Mode":"Copy Mode",
    "Copy Group Settings":"Copy Group Settings",
+   "Copy Timelapse Settings":"Copy Timelapse Settings",
    "Copy Connection Settings":"Copy Connection Settings",
    "Copy Custom Settings":"Copy Custom Settings",
    "Copy Logging Settings":"Copy Logging Settings",
