ShinobiHub config search use public configs

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -476,6 +476,7 @@
    "Timelapse Watermark": "Timelapse Watermark",
    "Region Editor": "Region Editor",
    "Detector Filters": "Detector Filters",
+   "Event Filters": "Event Filters",
    "Filter for Objects only": "Filter for Objects only",
    "Custom": "Custom",
    "Detector": "Detector",
@@ -507,8 +508,8 @@
    "opencvCascadesText": "If you see nothing here then just download this package of <a href=\"https://cdn.shinobi.video/weights/cascades.zip\">cascades</a>. Drop them into <code>plugins/opencv/cascades</code> then press refresh <i class=\"fa fa-retweet\"></i>.",
    "noSpecialCharacters": "No spaces or special characters.",
    "NotesPlacholder": "Comments you want to leave for this cameras settings.",
-   "InputText1": "This section tells Shinobi how to consume a stream. For optimal performance try tuning your camera's internal settings. Find the following options and set them as shown. To find your camera you can use the <b>built in ONVIF Scanner</b> of Shinobi. Some ONVIF cameras require the use of a management tool to modify their internal settings. If you can't find your cameras you can try <a href=\"http://cdn.shinobi.video/installers/odm-v2.2.250.msi\">ONVIF Device Manager for Windows</a>.",
-   "InputText2": "<ul><li><b>Framerate (FPS) :</b> High : 10 - 15 FPS, Low : 2-5 FPS</li><li><b>I-frame interval :</b> 1</li><li><b>Bit Rate Type :</b> VBR (Variable Bit Rate)</li><li><b>Bit Rate :</b> between 256kbps - 1000kbps</li></ul>",
+   "InputText1": "This section tells Shinobi how to consume a stream. For optimal performance try tuning your camera's internal settings. To find your camera you can use the <b>built in ONVIF Scanner</b> of Shinobi. To open the ONVIF Scanner click your username in the top left and then ONVIF.",
+   "InputText2": "Learn about configuring and tuning your cameras <a target='_blank' href='https://shinobi.video/docs/configure'>here</a>.",
    "InputText3": "If you need help figuring out what input type your camera is you can take a look in the <a href=\"http://shinobi.video/docs/cameras\" target=\"_blank\">Camera URLs List</a> on the Shinobi website.",
    "StreamText": "<p>This section will designate the primary method of streaming out and its settings. This stream will be displayed in the dashboard. If you choose to use HLS, JPEG, or MJPEG then you can consume the stream through other programs.</p><p class=\"h_st_input h_st_jpeg\">Using JPEG stream essentially turns off the primary stream and uses the snapshot bin to get frames.</p>",
    "DetectorText": "<p>When the Width and Height boxes are shown you should set them to 640x480 or below. This will optimize the read speed of frames.</p>",
