framework for Monitor Configuration Warnings and Automatic Repair

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -573,6 +573,15 @@
    "Record File Type": "Record File Type",
    "Notification Video Length": "Notification Video Length",
    "Video Codec": "Video Codec",
+   "Performance Optimization Possible": "Performance Optimization Possible",
+   "performanceOptimizeText1": "Your camera is providing H.264 stream data. You can set the Stream Type to HLS, Poseidon and Video Codec to copy.",
+   "Codec Mismatch": "Codec Mismatch",
+   "Automatic Codec Repair": "Automatic Codec Repair",
+   "Field Missing Value": "Field Missing Value",
+   "fieldMissingValueText1": "Your camera is providing MJPEG stream data. You need to set the Monitor Capture Rate. Shinobi will attempt to detect it and fill it automatically.",
+   "codecMismatchText1": "Your camera is providing H.265 (HEVC) stream data and you are using copy as the Video Codec for the Stream section. Your stream from Shinobi may not appear on devices that cannot use this codec. The Shinobi Mobile App can view these streams.",
+   "codecMismatchText2": "Your selected Video Codec is not applicable. Your camera is providing MJPEG stream data and you are using copy as the Video Codec for the Stream section. Changed the Stream Type to MJPEG.",
+   "codecMismatchText3": "Your selected Video Codec is not applicable. Your camera is providing MJPEG stream data and you are using copy as the Video Codec for the Recording section. Changed the Video Codec to libx264.",
    "Delete Monitor States Preset": "Delete Monitor States Preset",
    "Delete Schedule": "Delete Schedule",
    "Delete Monitor State?": "Delete Monitor State",
