re-add Update button to Superuser panel (dedicated and git-only)

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -414,6 +414,7 @@
    "API Key Added": "API Key Added",
    "APIKeyAddedText": "You may use this key now.",
    "Update": "Update",
+   "updateNotice1": "Updating Shinobi means overwriting files. If you have modified any files yourself you should update Shinobi manually. Your configurations and video files will not be modified.",
    "Update to Master": "Update to Master",
    "Update to Development": "Update to Development",
    "Filters Updated": "Filters Updated",
@@ -755,6 +756,8 @@
    "Query": "Query",
    "Request": "Request",
    "System": "System",
+   "restartRequired": "Restart of Shinobi Core is required for changes to take effect.",
+   "Shinobi Ordered to Update": "Shinobi Update Completed",
    "Restart Core": "Restart Core",
    "Restart CRON": "Restart CRON",
    "Flush PM2 Logs": "Flush PM2 Logs",
