ffmpeg.js : rewrite Continuous Recording output flags builder
+ add some Error checking and bypass for 453 occurence

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -532,6 +532,7 @@
    "Input Type": "Input Type",
    "Connection Type": "Connection Type",
    "RTSP Transport": "RTSP Transport",
+   "Protocol": "Protocol",
    "Host": "Host",
    "Force Port": "Force Port",
    "Path": "Path",
@@ -578,6 +579,7 @@
    "Performance Optimization Possible": "Performance Optimization Possible",
    "performanceOptimizeText1": "Your camera is providing H.264 stream data. You can set the Stream Type to HLS, Poseidon and Video Codec to copy.",
    "Codec Mismatch": "Codec Mismatch",
+   "Automatic Field Fill": "Automatic Field Fill",
    "Automatic Codec Repair": "Automatic Codec Repair",
    "Field Missing Value": "Field Missing Value",
    "fieldMissingValueText1": "Your camera is providing MJPEG stream data. You need to set the Monitor Capture Rate. Shinobi will attempt to detect it and fill it automatically.",
