populate fields (non-selector fields)

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -555,7 +555,7 @@
    "HLS Live Start Index": "HLS Live Start Index",
    "Check Signal Interval": "Check Signal Interval <small>in Minutes</small>",
    "Log Signal Event": "Log Signal Event <small>Client side only</small>",
-   "Quality": "Quality <small>1 is High, 23 is Low</small>",
+   "Quality": "Quality",
    "Rate": "Rate <small>(FPS)</small>",
    "Width": "Width",
    "Height": "Height",
@@ -1066,6 +1066,41 @@
    "Copy Recording Settings":"Copy Recording Settings",
    "Copy Detector Settings":"Copy Detector Settings",
    "Monitors to Copy to":"Monitors to Copy to",
+   "Video Configuration": "Video Configuration",
+   "ONVIF Device Manager": "ONVIF Device Manager",
+   "UseCount": "UseCount",
+   "EncodingInterval": "I-Frame",
+   "H264Profile": "H264 Profile",
+   "GovLength": "GOV",
+   "BitrateLimit": "Bitrate Limit",
+   "FrameRateLimit": "Frame Rate Limit (FPS)",
+   "NTP": "NTP",
+   "Date and Time": "Date and Time",
+   "TimeZone": "TimeZone",
+   "DaylightSavings": "Daylight Savings",
+   "DateTimeType": "Date Management",
+   "NTP Servers": "NTP Servers",
+   "DNS": "DNS",
+   "Gateway": "Gateway",
+   "DHCP": "DHCP",
+   "WideDynamicRange": "Wide Dynamic Range",
+   "WhiteBalance": "White Balance",
+   "Sharpness": "Sharpness",
+   "BacklightCompensation": "Backlight Compensation",
+   "IrCutFilter": "IR Cut Filter",
+   "UTCDateTime": "Date",
+   "Exposure": "Exposure",
+   "Contrast": "Contrast",
+   "MaxGain": "Maximum Gain",
+   "MinGain": "Minimum Gain",
+   "MaxExposureTime": "Maximum Exposure Time",
+   "MinExposureTime": "Minimum Exposure Time",
+   "ColorSaturation": "Color Saturation",
+   "Encoding": "Encoding",
+   "Brightness": "Brightness",
+   "Imaging": "Imaging",
+   "Hostname": "Hostname",
+   "Network": "Network",
    "No Sound": "No Sound",
    "Notification Sound":"Notification Sound",
    "Alert Sound":"Alert Sound",
