onvifDeviceManager : populate Imaging, minor cleanup

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -1096,6 +1096,8 @@
    "MaxExposureTime": "Maximum Exposure Time",
    "MinExposureTime": "Minimum Exposure Time",
    "ColorSaturation": "Color Saturation",
+   "On": "On",
+   "Off": "Off",
    "Encoding": "Encoding",
    "Brightness": "Brightness",
    "Resolution": "Resolution",
