onvifDeviceManager : add function to compile form fields for resepective posts

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -281,6 +281,7 @@
    "ONVIF Port": "ONVIF Port",
    "ONVIF Scanner": "ONVIF Scanner",
    "ONVIFEventsNotAvailable": "ONVIF Events not Available",
+   "ONVIFEventsNotAvailableText1": "This service may not be available for this camera or ONVIF has not initialized yet.",
    "ONVIFnotCompliantProfileT": "Camera is not ONVIF Profile T Compliant",
    "ONVIFErr400": "Found ONVIF port but authorization failed when retrieving the Stream URL. Check username and password used for scan. Make sure your camera time and server time are synced.",
    "ONVIFErr405": "Method Not Allowed. Check username and password used for scan.",
@@ -1088,7 +1089,7 @@
    "Sharpness": "Sharpness",
    "BacklightCompensation": "Backlight Compensation",
    "IrCutFilter": "IR Cut Filter",
-   "UTCDateTime": "Date (UTC)",
+   "UTCDateTime": "Date",
    "Exposure": "Exposure",
    "Contrast": "Contrast",
    "MaxGain": "Maximum Gain",
