onvifDeviceManager and Form Builder UI cleanup

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -1088,7 +1088,7 @@
    "WhiteBalance": "White Balance",
    "Sharpness": "Sharpness",
    "BacklightCompensation": "Backlight Compensation",
-   "IrCutFilter": "IR Cut Filter",
+   "IrCutFilter": "Night Vision",
    "UTCDateTime": "Date",
    "Exposure": "Exposure",
    "Contrast": "Contrast",
@@ -1105,10 +1105,12 @@
    "Imaging": "Imaging",
    "Hostname": "Hostname",
    "Network": "Network",
+   "Notice": "Notice",
    "No Sound": "No Sound",
    "Notification Sound":"Notification Sound",
    "Alert Sound":"Alert Sound",
    "Alert Sound Delay":"Alert Sound Delay",
+   "onvifdeviceManagerGlobalTip":"ONVIF allows modifying the camera's internal settings. ONVIF is somewhat of an umbrella term, it can mean many things unfortunately. With that being the case you may see an option in this tool but it may not be editable. This is usually because the camera vendor has not added this method or has deviated from its intended usage. In those cases you will need to enter the camera's configuration through the prescribed method of the camera vendor, this is generally opening the IP Address of the camera in your web browser.",
    "powerVideoEventLimit":"You have set a high event limit. Are you sure you want to make this request?",
    "There are no monitors that you can view with this account.":"There are no monitors that you can view with this account.",
    "Delete Monitors and Files": "Delete Monitors and Files",
