onvifDeviceManager : add confirm windows and camera reboot button
+ move Device Manager launch from inside Monitor Settings window

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -1099,6 +1099,11 @@
    "ColorSaturation": "Color Saturation",
    "On": "On",
    "Off": "Off",
+   "updateCamerasInternalSettings": "Update Camera's Internal Settings?",
+   "noUndoForAction": "You cannot undo this action.",
+   "Reboot Camera": "Reboot Camera",
+   "rebootingCamera": "Rebooting Camera",
+   "Reboot": "Reboot",
    "Encoding": "Encoding",
    "Brightness": "Brightness",
    "Resolution": "Resolution",
@@ -1111,6 +1116,8 @@
    "Alert Sound":"Alert Sound",
    "Alert Sound Delay":"Alert Sound Delay",
    "onvifdeviceManagerGlobalTip":"ONVIF allows modifying the camera's internal settings. ONVIF is somewhat of an umbrella term, it can mean many things unfortunately. With that being the case you may see an option in this tool but it may not be editable. This is usually because the camera vendor has not added this method or has deviated from its intended usage. In those cases you will need to enter the camera's configuration through the prescribed method of the camera vendor, this is generally opening the IP Address of the camera in your web browser.",
+   "onvifdeviceSavedText":"Camera's internal settings have been saved. You may need to restart the camera to have these changes take effect.",
+   "onvifdeviceSavedFoundErrorText":"Some settings may have reverted to a previous value. Its possible that the modified option is not available with this camera through ONVIF.",
    "powerVideoEventLimit":"You have set a high event limit. Are you sure you want to make this request?",
    "There are no monitors that you can view with this account.":"There are no monitors that you can view with this account.",
    "Delete Monitors and Files": "Delete Monitors and Files",
