add API Key selector to Monitors window

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -6,6 +6,7 @@
    "Time Left": "Time Left",
    "Inverse Trigger": "Inverse Trigger",
    "Turn Speed": "Turn Speed",
+   "Session Key": "Session Key",
    "Login": "Login",
    "Authenticate": "Authenticate",
    "Dashboard": "Dashboard",
