--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -190,6 +190,9 @@
    "Secure": "Secure",
    "Check": "Check",
    "Stop": "Stop",
+   "deleteApiKey": "Delete API Key",
+   "deleteApiKeyText": "Do you want to delete this API key? You cannot recover it.",
+   "Enter at least one IP": "Enter at least one IP",
    "Confirm": "Confirm",
    "Enable": "Enable",
    "Enabled": "Enabled",
