API Keys Manager : clean up interface layout

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -19,6 +19,7 @@
    "Turn Speed": "Turn Speed",
    "Session Key": "Session Key",
    "Login": "Login",
+   "API Key Action Failed": "API Key Action Failed",
    "Authenticate": "Authenticate",
    "Dashboard": "Dashboard",
    "Streamer": "Streamer",
