--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -113,6 +113,7 @@
    "Never": "Never",
    "API": "API",
    "ONVIF": "ONVIF",
+   "Home": "Home",
    "Set Home": "Set Home",
    "Set Home Position (ONVIF-only)": "Set Home Position (ONVIF-only)",
    "Non-Standard ONVIF": "Non-Standard ONVIF",
@@ -341,6 +342,7 @@
    "Group Name": "Group Name",
    "Show Thumbnails in Video List": "Show Thumbnails in Video List",
    "WebDAV": "WebDAV",
+   "Back": "Back",
    "Backblaze B2": "Backblaze B2",
    "Backblaze Error": "Backblaze Error",
    "SFTP (SSH File Transfer)": "SFTP (SSH File Transfer)",
@@ -666,6 +668,7 @@
    "DiscordFailedText": "Sending to Discord Failed",
    "DiscordErrorText": "Sending to Discord caused an Error",
    "DiscordNotEnabledText": "Discord Bot Not Enabled, Enable it in your Account Settings.",
+   "Account Settings": "Account Settings",
    "How to Record": "How to Record",
    "Trigger Record": "Trigger Record",
    "Recording Timeout": "Recording Timeout <small>in Minutes</small>",
