--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -118,6 +118,8 @@
    "Unlinked": "Unlinked",
    "Unlink Login": "Unlink Login?",
    "Home": "Home",
+   "alreadyLinked": "Already Linked to an Account",
+   "Link Google Account": "Link Google Account",
    "noLoginTokensAdded": "There are no Alternate Logins associated to this account.",
    "tokenNotUserBound": "This Login Handle is not linked to a user on this server!",
    "tokenNotUserBoundPt2": "Type your credentials then use the Google Sign-In button to link quickly.",
