Fix Google App ID designation, add Name to LoginTokens
+ Show Last Login for LoginTokens in Settings window

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -117,6 +117,7 @@
    "Unlink": "Unlink",
    "Unlinked": "Unlinked",
    "Unlink Login": "Unlink Login?",
+   "lastLogin": "Last Login",
    "Home": "Home",
    "alreadyLinked": "Already Linked to an Account",
    "Link Google Account": "Link Google Account",
