--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -49,6 +49,8 @@
    "CPU": "CPU",
    "Cores": "Cores",
    "Threads": "Threads",
+   "Copy": "Copy",
+   "Copied": "Copied",
    "Copied to Clipboard": "Copied to Clipboard",
    "Download Bandwidth": "Download Bandwidth",
    "Upload Bandwidth": "Upload Bandwidth",
@@ -637,6 +639,9 @@
    "monitorStateNotEnoughChanges": "You need to make a change in your monitor configuration before attempting to add it to a Preset.",
    "Search Images": "Search Images",
    "Launch in New Window": "Launch in New Window",
+   "wannaReset": "Do you want to Reset?",
+   "Reset": "Reset",
+   "Reset Form": "Reset Form",
    "Preset": "Preset",
    "Presets": "Presets",
    "possibleInternalError": "Possible Internal Error",
@@ -836,6 +841,7 @@
    "Monitor Name": "Monitor Name",
    "Mp4Frag": "Mp4Frag",
    "Status Changed": "Status Changed",
+   "sorryNo": "Sorry, No",
    "Monitor is now Idle": "Monitor is now Idle",
    "Monitor is now Disabled": "Monitor is now Disabled",
    "Monitor is now Watching": "Monitor is now Watching",
@@ -1152,6 +1158,15 @@
    "Hostname": "Hostname",
    "Network": "Network",
    "Notice": "Notice",
+   "getUserInfo": "Get User Information",
+   "getAllMonitors": "Get All Monitors",
+   "getAMonitor": "Get a Monitor",
+   "getAllTvChannels": "Get All TV Channels",
+   "getATvChannel": "Get TV Channels for Monitor",
+   "getAllTvChannelsText": "Get all available h.264 streams in an .m3u8 playlist. Enable the TV Channel option in your monitor's settings to see their streams in this list.",
+   "getATvChannelText": "Get a single monitor's available h.264 streams in an .m3u8 playlist.",
+   "getVideos": "Get Videos",
+   "getVideosForMonitor": "Get Videos for Monitor",
    "No Sound": "No Sound",
    "Notification Sound":"Notification Sound",
    "Alert Sound":"Alert Sound",
