--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -526,6 +526,7 @@
    "Minimum dB": "Minimum dB",
    "Maximum dB": "Maximum dB",
    "Connected": "Connected",
+   "Saved": "Saved",
    "Not Saved": "Not Saved",
    "Not Connected": "Not Connected",
    "License Plate Detector": "License Plate Detector",
