update definitions and language files

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -519,6 +519,9 @@
    "Detector Filters": "Detector Filters",
    "Event Filters": "Event Filters",
    "Filter for Objects only": "Filter for Objects only",
+   "AddToPreset": "Add to Preset",
+   "DontAddToPreset": "Don't Add to Preset",
+   "Minutes": "Minutes",
    "Custom": "Custom",
    "Detector": "Detector",
    "Audio Detector": "Audio Detector",
@@ -526,6 +529,11 @@
    "Minimum dB": "Minimum dB",
    "Maximum dB": "Maximum dB",
    "Connected": "Connected",
+   "Grid": "Grid",
+   "Open": "Open",
+   "Live Grid": "Live Grid",
+   "liveGridDescription": "Live Grid is the multiple stream display for Shinobi. This viewing method is mainly designed for desktop.",
+   "accountSettingsDescription": "Manage your Profile and set options like Max Storage Amount and Max Number of Days to keep videos.",
    "Saved": "Saved",
    "Not Saved": "Not Saved",
    "Not Connected": "Not Connected",
