Add Telegram Notifications

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -664,6 +664,8 @@
    "Webhook URL": "Webhook URL",
    "Command on Trigger": "Command on Trigger",
    "Command": "Command",
+   "on Event": "on Event",
+   "Allow Next Alert": "Allow Next Alert",
    "Allow Next Webhook": "Allow Next Webhook",
    "Allow Next Command": "Allow Next Command",
    "Allow Next Trigger": "Allow Next Trigger",
@@ -680,6 +682,9 @@
    "DiscordLoggedIn": "Discord Bot Authenticated",
    "DiscordFailedText": "Sending to Discord Failed",
    "DiscordErrorText": "Sending to Discord caused an Error",
+   "NotifyErrorText": "Sending Notification caused an Error",
+   "Check the Channel ID": "Check the Channel ID",
+   "Check the Recipient ID": "Check the Recipient ID",
    "DiscordNotEnabledText": "Discord Bot Not Enabled, Enable it in your Account Settings.",
    "Account Settings": "Account Settings",
    "How to Record": "How to Record",
@@ -958,6 +963,7 @@
    "Videos Merge":"Videos Merge",
    "Token":"Token",
    "Channel ID":"Channel ID",
+   "Recipient ID":"Recipient ID",
    "New Authentication Token":"New Authentication Token",
    "All Logs":"All Logs",
    "For Group":"For Group",
