Timelapse, Event Filters, ONVIF Scanner, Camera Probe added to definitions

--- a/languages/en_CA.json
+++ b/languages/en_CA.json
@@ -331,8 +331,8 @@
    "Found Devices": "Found Devices",
    "Switch on for Still Image": "Switch on for Still Image",
    "Live Stream Toggle": "Live Stream Toggle",
-   "RegionNote": "Points are only saved when you press <b>Save</b> on the <b>Monitor Settings</b> window.",
-   "Points": "Points <small>When adding points click on the edge of the polygon.</small>",
+   "RegionNote": "When adding points click on the edge of the polygon. Right click a point to remove.",
+   "Points": "Points",
    "Minimum Change": "Minimum Change",
    "Maximum Change": "Maximum Change",
    "Indifference": "Indifference",
@@ -463,7 +463,7 @@
    "Import Monitor Configuration": "Import Monitor Configuration",
    "ImportMultiMonitorConfigurationText": "Doing this will overrwrite any monitors with IDs existing in the import file.",
    "ImportMonitorConfigurationText": "Doing this will overrwrite any changes currently not saved. Imported changes will only be applied when you press <b>Save</b>.",
-   "Paste JSON here.": "Paste JSON here.",
+   "Paste JSON here.": "Paste JSON here or upload file.",
    "Delete Monitor": "Delete Monitor",
    "DeleteMonitorText": "Do you want to delete this monitor? You cannot recover it. You can choose for the files to remain in the filesystem. If you choose to recreate a monitor with the same ID the videos and events will become visible in the dashboard.",
    "DeleteMonitorsText": "Do you want to delete these monitors? You cannot recover them. You can choose to keep the files for these IDs in the filesystem. If you choose to recreate a monitor with one of the IDs the videos and events will become visible in the dashboard.",
@@ -677,6 +677,7 @@
    "Event Webhook Error": "Event Webhook Error",
    "Webhook URL": "Webhook URL",
    "Command on Trigger": "Command on Trigger",
+   "Frames": "Frames",
    "Command": "Command",
    "No Trigger": "No Trigger",
    "noTriggerText": "If motion has not been detected after the timeout period you will recieve an Discord notification.",
@@ -816,6 +817,8 @@
    "Filter Matches": "Filter Matches",
    "FilterMatchesText1": "This filter has met conditions.",
    "FilterMatchesText2": "videos found.",
+   "separateByCommasOrRange": "Separate by Commas or a Range",
+   "Conditions": "Conditions",
    "Executed": "Executed",
    "Deleted": "Deleted",
    "Query": "Query",
@@ -828,6 +831,7 @@
    "Flush PM2 Logs": "Flush PM2 Logs",
    "Controls and Logs": "Controls and Logs",
    "Delete Logs": "Delete Logs",
+   "Delete Region": "Delete Region",
    "Filter ID": "Filter ID",
    "Webdav Error": "Webdav Error",
    "WebdavErrorTextTryCreatingDir": "Cannot save. Trying to create directory.",
